# asfraud

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
.sqlx/: query-053cde34a492caf38a414240c900d5a38fceeddb2f53db38430bdab9dcab2c5c.json  query-65ff19c40888c35f2076c700999a192eb6f188c72b174f383e0a72874c59c3a1.json  query-776db91a0d2b44a888ab611d399a2398c5d0471fdd2c8264fe25390e05891c1a.json  query-8565cacf6a9e81d2640caf024db1fa94f044001651b99e63af503f9d7f38a452.json  query-b4862ca0d7548df52e9e8604eda00525368af258b061baf74523a56461049598.json  query-c306a024b5ddce80d9d1b7c5e21790d0d42e7ef8ddbb7d4de32c1b4d550fd82d.json
migrations/: 20230729022955_init.down.sql  20230729022955_init.up.sql
src/: db.rs  error.rs  main.rs  models.rs
src/routes/: admin.rs  mod.rs
static/: index.html
