[package]
name = "asfraud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive"] }
http = "0.2.7"
lazy_static = "1.4.0"
regex = "1.5.6"
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["fs"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
