[package]
name = "asfraud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
anyhow = "1.0.57"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "3.1.18", features = ["derive"] }
http = "0.2.7"
lazy_static = "1.4.0"
regex = "1.5.6"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.81"
sqlx = { version = "0.7.1", features = ["sqlite", "chrono", "runtime-tokio"] }
tokio = { version = "1.18.2", features = ["fs"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
